--- a/model_z_danymi_ze_zdj/report.Rmd
+++ b/model_z_danymi_ze_zdj/report.Rmd
@@ -38,7 +38,7 @@ kable(table, align = "c") %>%
 ```{r}
 temp <- t(cbind(table[,3],table[,4]))
 coord <- data.frame(lat=temp[2,], lng=temp[1,])
-
+label <- table$Gmina
 df <- data.frame(lat = as.numeric(coord$lat),
                  lng = as.numeric(coord$lng))
 zoom <- abs(ceiling(log2(max(params$lng_max - params$lng_min, params$lat_max - params$lat_min) / 256))) +1
@@ -49,8 +49,8 @@ df %>%
                    params$lng_max, params$lat_max, fillColor = "transparent") %>%
   fitBounds(lng1 = params$lng_min, lat1 = params$lat_min,
                    lng2 = params$lng_max, lat2 = params$lat_max) %>%
-    setMaxBounds(lng1 = params$lng_min, lat1 = params$lat_min,
+  setMaxBounds(lng1 = params$lng_min, lat1 = params$lat_min,
                    lng2 = params$lng_max, lat2 = params$lat_max) %>%
-  addMarkers()
+  addMarkers(popup = label)
 ```
 
