--- a/model_z_danymi_ze_zdj/report.Rmd
+++ b/model_z_danymi_ze_zdj/report.Rmd
@@ -67,11 +67,11 @@ explainer <- params$explainer
 
 # break down plot for the best
 c(lng, lat) <- table[1,3:4]
-break_down <- predict_parts(explainer, new_observation = params$data[]) # wyciągnąć z data tą obserwację co naj 
+break_down <- predict_parts(explainer, new_observation = params$data[1,]) # wyciągnąć z data tą obserwację co naj 
 plot(break_down)
 ```
 
-```{r importance, eval=FALSE}
+```{r importance}
 # variable importance
 var_important <- variable_importance(explainer, loss_function = loss_root_mean_square)
 plot(var_important)
