--- a/model_z_danymi_ze_zdj/report.Rmd
+++ b/model_z_danymi_ze_zdj/report.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Report"
-author: "Agata Makarewicz"
-date: "4 01 2021"
+author: 
+date: "`r Sys.Date()`"
 params:
   table: 'NULL'
   lat_min: 'NULL' 
@@ -14,10 +14,13 @@ always_allow_html: true
 header-includes:
    - \usepackage{float}
    - \usepackage[polish]{babel}
+output:
+  prettydoc::html_pretty:
+    theme: cayman
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE)
+knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE, fig.align = "center")
 library(kableExtra)
 library(knitr)
 library(dplyr)
@@ -27,19 +30,17 @@ library(ranger)
 Sys.setlocale(category = "LC_ALL", locale = "Polish")
 ```
 
-## Table
+Top gminas in the selected area are presented in the table. Those locations are marked on the map below. If you want to check where the marker points, click on it.
 
 ```{r}
 table <- params$table
-colnames(table) <- c('Wynik', 'Gmina', 'Długość geogr.', 'Szerokość geogr.')
+colnames(table) <- c('Score', 'Gmina', 'Longitude', 'Latitude')
 kable(table, align = "c") %>%
   kable_styling() %>%
   column_spec(1, bold = T) %>%
   row_spec(0, bold = T, color = "white", background = "#7eb6e7")
 
 ```
-
-## Map
 
 ```{r}
 temp <- t(cbind(table[,3],table[,4]))
@@ -60,18 +61,19 @@ df %>%
   addMarkers(popup = label)
 ```
 
-## Explain
+Following plot shows how different factors are used by model to create final result. The last plot presents variable importance in the prediction model.
 
 ```{r breakdown}
 
 data <- params$data
 # break down plot for the best
-lng <- result[1,3]
-lat <- result[1,4]
+lng <- table[1,3]
+lat <- table[1,4]
 index <- which(data_report$szerokosc==lat & data_report$dlugosc==lng)
 break_down <- predict_parts(explainer, new_observation = data[index,-c(1:3)]) # wyciągnąć z data tą obserwację co naj 
-plot(break_down)
+plot(break_down, title = paste0("Break down profile of ", table[1, 2]))
 ```
+
 
 ```{r importance}
 # variable importance
