--- a/model_z_danymi_ze_zdj/report.Rmd
+++ b/model_z_danymi_ze_zdj/report.Rmd
@@ -19,6 +19,12 @@ output:
     theme: cayman
 ---
 
+<style>
+.leaflet {
+    margin: auto;
+}
+</style>
+
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE, fig.align = "center")
 library(kableExtra)
@@ -30,7 +36,7 @@ library(ranger)
 Sys.setlocale(category = "LC_ALL", locale = "Polish")
 ```
 
-Top gminas in the selected area are presented in the table. Those locations are marked on the map below. If you want to check where the marker points, click on it.
+Top 5 gminas in the selected area are presented in the table. Those locations are marked on the map below. If you want to check to which gmina given marker corresponds, click on it.
 
 ```{r}
 table <- params$table
@@ -49,7 +55,7 @@ label <- table$Gmina
 df <- data.frame(lat = as.numeric(coord$lat),
                  lng = as.numeric(coord$lng))
 zoom <- abs(ceiling(log2(max(params$lng_max - params$lng_min, params$lat_max - params$lat_min) / 256))) +1
-df %>%
+df[-1,] %>%
   leaflet(options = leafletOptions(minZoom = zoom, maxZoom = zoom+3)) %>%
     addTiles()%>%
   addRectangles(params$lng_min, params$lat_min,
@@ -58,25 +64,25 @@ df %>%
                    lng2 = params$lng_max, lat2 = params$lat_max) %>%
   setMaxBounds(lng1 = params$lng_min, lat1 = params$lat_min,
                    lng2 = params$lng_max, lat2 = params$lat_max) %>%
-  addMarkers(popup = label)
+  addMarkers(popup = label) %>%
+  addMarkers(lng = as.numeric(table[1,3]), lat = as.numeric(table[1,4]), popup = table[1,2], 
+                    icon = makeIcon('marker-icon-gold.png', 'marker-icon-2x-gold.png', 25, 40))
+
 ```
 
-Following plot shows how different factors are used by model to create final result. The last plot presents variable importance in the prediction model.
+Following plot shows how different factors are used by the model to create final result in case of best gmina. The last plot presents variable importance in the prediction model.
 
 ```{r breakdown}
-
 data <- params$data
-# break down plot for the best
 lng <- table[1,3]
 lat <- table[1,4]
 index <- which(data_report$szerokosc==lat & data_report$dlugosc==lng)
-break_down <- predict_parts(explainer, new_observation = data[index,-c(1:3)]) # wyciągnąć z data tą obserwację co naj 
-plot(break_down, title = paste0("Break down profile of ", table[1, 2]))
+break_down <- predict_parts(explainer, new_observation = data[index,-c(1:3)])
+plot(break_down)
 ```
 
 
 ```{r importance}
-# variable importance
 var_important <- variable_importance(explainer, loss_function = loss_root_mean_square)
 plot(var_important)
 ```
