--- a/model_z_danymi_ze_zdj/report.Rmd
+++ b/model_z_danymi_ze_zdj/report.Rmd
@@ -66,7 +66,9 @@ df[-1,] %>%
                    lng2 = params$lng_max, lat2 = params$lat_max) %>%
   addMarkers(popup = label) %>%
   addMarkers(lng = as.numeric(table[1,3]), lat = as.numeric(table[1,4]), popup = table[1,2], 
-                    icon = makeIcon('marker-icon-gold.png', 'marker-icon-2x-gold.png', 25, 40))
+                    icon = makeIcon('marker-icon-gold.png', 'marker-icon-2x-gold.png', 
+                                    shadowUrl= 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/images/marker-shadow.png',
+                                    shadowAnchorX = 13, shadowAnchorY = 21, 26, 42))
 
 ```
 
