--- a/model_z_danymi_ze_zdj/report.Rmd
+++ b/model_z_danymi_ze_zdj/report.Rmd
@@ -80,7 +80,7 @@ lng <- table[1,3]
 lat <- table[1,4]
 index <- which(data_report$szerokosc==lat & data_report$dlugosc==lng)
 break_down <- predict_parts(explainer, new_observation = data[index,-c(1:3)])
-plot(break_down)
+plot(break_down, title = paste0("Break down profile of ", table[1, 2]))
 ```
 
 
